--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Test
 
 on:
   pull_request:
-    paths: ["go/**/*.go"]
+    paths: ["go/excellent/*.go"]
 jobs:
   test:
     runs-on: ubuntu-latest
