--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,11 @@
 name: Test
 
 on:
-  pull_request:
-    paths: ["go/excellent/*.go"]
+  issues:
+    types: [opened, edited]
+
+    pull_request:
+      paths: ["go/excellent/*.go"]
 jobs:
   test:
     runs-on: ubuntu-latest
